k8s/gcloud-sdk-pod.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: gcloud-sdk
    image: google/cloud-sdk:latest
    command:
    - cat
    tty: true
