k8s/autoclean-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoclean-service
spec:
  type: ClusterIP
  selector:
    app: autoclean
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
